--- a/ima3.html
+++ b/ima3.html
@@ -8,39 +8,39 @@
     <a href="imam.html" class="ns">
         <input type="button" value="Back" class="btn">
     </a><br>
-    <img src="images/pwpu1.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu1.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman has nausea because she is pregnant.</label><br><br>
-    <img src="images/pwpu2.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu2.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman has nausea too because she is pregnant.</label><br><br>
-    <img src="images/pwpu3.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu3.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu4.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu4.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu5.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu5.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu6.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu6.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu7.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu7.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu8.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu8.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu9.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu9.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu10.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu10.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu11.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu11.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu12.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu12.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu13.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu13.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu14.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu14.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu15.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu15.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu16.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu16.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pwpu17.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu17.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking because she has morning sickness.</label><br><br>
 </body>
 </html>
