--- a/ima1.html
+++ b/ima1.html
@@ -8,17 +8,17 @@
     <a href="imam.html" class="ns">
         <input type="button" value="Back" class="btn">
     </a><br><br>
-    <img src="images/mpu1.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/man/mpu1.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">Here is a man who is puking milk.</label><br><br>
-    <img src="images/mpu2.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/man/mpu2.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">Here is a man who is puking milk too.</label><br><br>
-    <img src="images/mpu3.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/man/mpu3.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">Here is a man who is puking milk too.</label><br><br>
-    <img src="images/mpu4.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/man/mpu4.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">Here is a man who is puking out a really acidi and dark stuff.</label><br><br>
-    <img src="images/mpu5.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/man/mpu5.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">Here is a man who is puking out water and stomac acid.</label><br>
-    <img src="images/mpu6.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/man/mpu6.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">Here is a man who is puking out a really acidi stuff.</label><br>
 </body>
 </html>
