--- a/ima2.html
+++ b/ima2.html
@@ -8,19 +8,19 @@
     <a href="imam.html" class="ns">
         <input type="button" value="Back" class="btn">
     </a><br>
-    <img src="images/wpu1.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu1.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff.</label><br><br>
-    <img src="images/wpu2.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu2.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/wpu3.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu3.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/wpu4.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu4.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/wpu5.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu5.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/wpu6.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu6.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/wpu7.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu7.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
 </body>
 </html>
