--- a/ima2.html
+++ b/ima2.html
@@ -23,6 +23,6 @@
     <img src="images/woman/wpu7.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/woman/wpu8.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking out shes food..</label><br><br>
+    <label for="">This woman is puking out shes food.</label><br><br>
 </body>
 </html>
