--- a/ima2.html
+++ b/ima2.html
@@ -8,49 +8,49 @@
     <a href="imam.html" class="ns">
         <input type="button" value="Back" class="btn">
     </a><br>
-    <img src="images/woman/wpu1.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu1.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff.</label><br><br>
-    <img src="images/woman/wpu2.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu2.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/woman/wpu3.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu3.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/woman/wpu4.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu4.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/woman/wpu5.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu5.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/woman/wpu6.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu6.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/woman/wpu7.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu7.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/woman/wpu8.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu8.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out shes food.</label><br><br>
-    <img src="images/woman/wpu9.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu9.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out vegetabels.</label><br><br>
-    <img src="images/woman/wpu10.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu10.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out shes coffe.</label><br><br>
-    <img src="images/woman/wpu11.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu11.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out chicken wings and burping out gases.</label><br><br>
-    <img src="images/woman/wpu12.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu12.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out coffe.</label><br><br>
-    <img src="images/woman/wpu13.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu13.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out ice cream.</label><br><br>
-    <img src="images/woman/wpu14.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu14.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out orange juice and food.</label><br><br>
-    <img src="images/woman/wpu15.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu15.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out ice cream.</label><br><br>
-    <img src="images/woman/wpu16.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu16.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out water and a little food.</label><br><br>
-    <img src="images/woman/wpu17.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu17.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out ice cream.</label><br><br>
-    <img src="images/woman/wpu18.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu18.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out an orange.</label><br><br>
-    <img src="images/woman/wpu19.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu19.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is having dirrhea and puking out vine.</label><br><br>
-    <img src="images/woman/wpu20.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu20.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out an energy bar.</label><br><br>
-    <img src="images/woman/wpu21.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu21.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out ice cream.</label><br><br>
-    <img src="images/woman/wpu22.jpg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu22.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out shes food.</label><br><br>
 </body>
 </html>
