--- a/ima2.html
+++ b/ima2.html
@@ -8,21 +8,21 @@
     <a href="imam.html" class="ns">
         <input type="button" value="Back" class="btn">
     </a><br>
-    <img src="images/woman/wpu1.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu1.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff.</label><br><br>
-    <img src="images/woman/wpu2.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu2.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/woman/wpu3.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu3.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/woman/wpu4.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu4.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/woman/wpu5.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu5.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/woman/wpu6.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu6.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/woman/wpu7.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu7.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/woman/wpu8.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/woman/wpu8.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out shes food.</label><br><br>
     <img src="images/woman/wpu9.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out vegetabels.</label><br><br>
