--- a/ima3.html
+++ b/ima3.html
@@ -9,38 +9,50 @@
         <input type="button" value="Back" class="btn">
     </a><br>
     <img src="images/pregnant/pwpu1.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman has nausea because she is pregnant.</label><br><br>
+    <label for="">This pregnant woman is having nausea.</label><br><br>
     <img src="images/pregnant/pwpu2.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman has nausea too because she is pregnant.</label><br><br>
+    <label for="">This pregnant woman is having nausea too.</label><br><br>
     <img src="images/pregnant/pwpu3.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff.</label><br><br>
     <img src="images/pregnant/pwpu4.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/pregnant/pwpu5.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/pregnant/pwpu6.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/pregnant/pwpu7.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/pregnant/pwpu8.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pregnant/pwpu9.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pregnant/pwpu10.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pregnant/pwpu11.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pregnant/pwpu12.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pregnant/pwpu13.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pregnant/pwpu14.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
-    <img src="images/pregnant/pwpu15.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
+    <img src="images/pregnant/pwpu9.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
+    <img src="images/pregnant/pwpu10.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
+    <img src="images/pregnant/pwpu11.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
+    <img src="images/pregnant/pwpu12.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
+    <img src="images/pregnant/pwpu13.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
+    <img src="images/pregnant/pwpu14.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
+    <img src="images/pregnant/pwpu15.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/pregnant/pwpu16.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/pregnant/pwpu17.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking because she has morning sickness.</label><br><br>
+    <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
+    <img src="images/pregnant/pwpu18.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is puking out deep fried stuff.</label><br><br>
+    <img src="images/pregnant/pwpu19.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is puking out ice cream.</label><br><br>
+    <img src="images/pregnant/pwpu20.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is puking out orange juice while having nausea.</label><br><br>
+    <img src="images/pregnant/pwpu21.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is puking out a lot of vegetabels.</label><br><br>
+    <img src="images/pregnant/pwpu22.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is having nausea.</label><br><br>
+    <img src="images/pregnant/pwpu23.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <label for="">This pregnant woman is puking out water and a little food.</label><br><br>
 </body>
 </html>
