--- a/ima3.html
+++ b/ima3.html
@@ -24,19 +24,19 @@
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/pregnant/pwpu8.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/pregnant/pwpu9.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu9.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/pregnant/pwpu10.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu10.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/pregnant/pwpu11.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu11.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/pregnant/pwpu12.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu12.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/pregnant/pwpu13.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/pregnant/pwpu14.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu14.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/pregnant/pwpu15.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu15.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/pregnant/pwpu16.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
