--- a/ima3.html
+++ b/ima3.html
@@ -32,7 +32,7 @@
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/pregnant/pwpu12.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
-    <img src="images/pregnant/pwpu13.jpeg" alt="" style="width:200px;height:200px;"><br>
+    <img src="images/pregnant/pwpu13.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/pregnant/pwpu14.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
