--- a/about.html
+++ b/about.html
@@ -10,6 +10,6 @@
     </a>
     <h1>About IPuke</h1>
     <p>This is a website where you can find anything about puking</p>
-    <p>Funfact puking means vomiting, throwing up and emesis.</p>
+    <p>Funfact puking means emesis, throwing up, barfing, spewing, upchucking, heaving, hurling, ralphing.</p>
 </body>
 </html>
