--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
     <a href="vidm.html" class="ns">
         <input type="button" value="Video Searching" class="btn">
     </a>
+
+    <a href="aum.html" class="ns">
+        <input type="button" value="Audio Searching" class="btn">
+    </a>
 </body>
 </html>
