--- a/ima2.html
+++ b/ima2.html
@@ -23,13 +23,13 @@
     <img src="images/woman/wpu7.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/woman/wpu8.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking out shes food.</label><br><br>
+    <label for="">This woman is puking out mixed food.</label><br><br>
     <img src="images/woman/wpu9.jpeg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking out vegetabels.</label><br><br>
+    <label for="">This woman is puking out stomac acid.</label><br><br>
     <img src="images/woman/wpu10.jpeg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking out shes coffe.</label><br><br>
+    <label for="">This woman is puking out mixed food too.</label><br><br>
     <img src="images/woman/wpu11.jpeg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking out chicken wings and burping out gases.</label><br><br>
+    <label for="">This woman is puking out mixed food and burping out gases.</label><br><br>
     <img src="images/woman/wpu12.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out coffe.</label><br><br>
     <img src="images/woman/wpu13.jpeg" alt="" style="width:200px;height:200px;"><br>
@@ -45,12 +45,12 @@
     <img src="images/woman/wpu18.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out an orange.</label><br><br>
     <img src="images/woman/wpu19.jpeg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is having dirrhea and puking out vine.</label><br><br>
+    <label for="">This woman is having dirrhea and puking out mixed food.</label><br><br>
     <img src="images/woman/wpu20.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out an energy bar.</label><br><br>
     <img src="images/woman/wpu21.jpeg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This woman is puking out ice cream.</label><br><br>
     <img src="images/woman/wpu22.jpeg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">This woman is puking out shes food.</label><br><br>
+    <label for="">This woman is puking out stomac acid.</label><br><br>
 </body>
 </html>
