--- a/ima3.html
+++ b/ima3.html
@@ -43,13 +43,13 @@
     <img src="images/pregnant/pwpu17.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">This pregnant woman is puking out a really acidi stuff too.</label><br><br>
     <img src="images/pregnant/pwpu18.jpeg" alt="" style="width:400px;height:600px;"><br>
-    <label for="">This pregnant woman is puking out deep fried stuff.</label><br><br>
+    <label for="">This pregnant woman is puking out mixed up foods.</label><br><br>
     <img src="images/pregnant/pwpu19.jpeg" alt="" style="width:400px;height:600px;"><br>
     <label for="">This pregnant woman is puking out ice cream.</label><br><br>
     <img src="images/pregnant/pwpu20.jpeg" alt="" style="width:400px;height:600px;"><br>
     <label for="">This pregnant woman is puking out orange juice while having nausea.</label><br><br>
     <img src="images/pregnant/pwpu21.jpeg" alt="" style="width:400px;height:600px;"><br>
-    <label for="">This pregnant woman is puking out a lot of vegetabels.</label><br><br>
+    <label for="">This pregnant woman is puking out a lot of stomac acid.</label><br><br>
     <img src="images/pregnant/pwpu22.jpeg" alt="" style="width:400px;height:600px;"><br>
     <label for="">This pregnant woman is having nausea.</label><br><br>
     <img src="images/pregnant/pwpu23.jpeg" alt="" style="width:400px;height:600px;"><br>
