--- a/ima1.html
+++ b/ima1.html
@@ -23,8 +23,8 @@
     <img src="images/man/mpu7.jpg" alt="" style="width:200px;height:200px;"><br>
     <label for="">Here is a man who is puking out hes food.</label><br>
     <img src="images/man/mpu8.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">Here is a man who is puking out some vegetabels.</label><br>
+    <label for="">Here is a man who is puking out some stomac acid.</label><br>
     <img src="images/man/mpu9.jpg" alt="" style="width:200px;height:200px;"><br>
-    <label for="">Here is a man who is puking out orange juice.</label><br>
+    <label for="">Here is a man who is puking out mixed food.</label><br>
 </body>
 </html>
