--- a/aum.html
+++ b/aum.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title>IPuke</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Select The Sounds You Want To Listen</h1>
+    <a href="index.html" class="ns">
+        <input type="button" value="Back" class="btn">
+    </a><br>
+    <a href="au.html" class="ns">
+        <input type="button" value="Puking Man" class="btn">
+    </a><br>
+    <a href="au2.html" class="ns">
+        <input type="button" value="Puking Woman" class="btn">
+    </a><br>
+    <a href="au3.html" class="ns">
+        <input type="button" value="Pregnant Woman" class="btn">
+    </a>
+</body>
+</html>
