--- a/aum.html
+++ b/aum.html
@@ -9,7 +9,7 @@
     <a href="index.html" class="ns">
         <input type="button" value="Back" class="btn">
     </a><br>
-    <a href="au.html" class="ns">
+    <a href="au1.html" class="ns">
         <input type="button" value="Puking Man" class="btn">
     </a><br>
     <a href="au2.html" class="ns">
